<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:iconSpaceReserved="false">

    <PreferenceCategory app:iconSpaceReserved="false" app:title="@string/settings_permissions_header">

        <Preference
                app:iconSpaceReserved="false"
                app:key="access_overlay_perms"
                app:title="@string/settings_overlay_permissions_title"
                app:summary="@string/settings_overlay_permissions_summary" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="Access from other sites"
            app:summary="Allow access from an external site"
            app:iconSpaceReserved="false">

        <EditTextPreference
                app:iconSpaceReserved="false"
                app:dialogMessage="Enter the hostname you want to allow access from."
                app:dialogTitle="Enter CORS Host"
                app:key="cors_host"
                app:title="CORS Host"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/settings_preferred_storage_header">

        <Preference
                app:iconSpaceReserved="false"
                app:key="import_local_audio_db"
                app:title="@string/settings_import_local_audio_title"
                app:summary="@string/settings_import_local_audio_summary" />
        <Preference
                app:iconSpaceReserved="false"
                app:key="local_audio_db_status"
                app:title="@string/settings_local_audio_status_title" />
        <Preference
                app:iconSpaceReserved="false"
                app:key="delete_local_audio_db"
                app:title="@string/settings_delete_local_audio_title"
                app:summary="@string/settings_delete_local_audio_summary" />

    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/settings_other_header">

        <CheckBoxPreference
                app:iconSpaceReserved="false"
                app:key="start_on_boot"
                app:defaultValue="true"
                app:title="@string/settings_start_on_boot_title"
                app:summary="@string/settings_start_on_boot_summary" />

        <CheckBoxPreference
                app:iconSpaceReserved="false"
                app:key="pause_server_when_screen_off"
                app:defaultValue="false"
                app:title="@string/settings_pause_screen_off_title"
                app:summary="@string/settings_pause_screen_off_summary" />

        <Preference
                app:iconSpaceReserved="false"
                app:key="disable_battery_optimization"
                app:title="@string/settings_battery_optimization_title"
                app:summary="@string/settings_battery_optimization_summary_enabled" />

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="forvo_language"
            app:title="@string/settings_forvo_language_title"
            app:summary="@string/settings_forvo_language_summary"
            android:dialogTitle="@string/settings_forvo_language_dialog_title"
            android:defaultValue="ja"
            android:entries="@array/forvo_language_entries"
            android:entryValues="@array/forvo_language_values" />

    </PreferenceCategory>
</PreferenceScreen>
