<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        style="@style/MyToolbar"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ankiconnect Android" />

            <Button
                android:id="@+id/start_service_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startServiceBtn"
                android:text="@string/action_start_service" />

            <Button
                android:id="@+id/stop_service_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="stopServiceBtn"
                android:text="@string/action_stop_service"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/service_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/service_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/service_status_stopped" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/yomitan_urls_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/yomitan_urls_header"
                android:textStyle="bold" />

            <Button
                android:id="@+id/copy_ankiconnect_url_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="copyAnkiConnectUrlBtn"
                android:text="@string/copy_ankiconnect_url" />

            <Button
                android:id="@+id/copy_local_audio_url_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="copyLocalAudioUrlBtn"
                android:text="@string/copy_local_audio_url" />

            <Button
                android:id="@+id/copy_forvo_url_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="copyForvoUrlBtn"
                android:text="@string/copy_forvo_url" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
